fixed mobile overflow issue

--- a/startup-demo-site/src/index.css
+++ b/startup-demo-site/src/index.css
@@ -84,5 +84,11 @@ img {
 
 body {
   font-family: 'SatoshiVariable', sans-serif;
+}
+
+
+#root {
   overflow-x: hidden;
+    position: relative;
+    width: 100vw;
 }
